# sonic-flow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
.claude/: settings.json
.claude/commands/: impl.md  pr.md
.cursor/rules/: architecture.md  config.md  graphics.md  main.md  performance.md  rust.md  testing.md  ui.md
app/: Cargo.toml
app/src/: main.rs
app/src/app/: command.rs  controller.rs  event.rs  mod.rs
app/src/ui/: app.slint  audio_bridge.rs  bindings.rs  main_binding.rs  mod.rs
app/src/ui/components/: common.slint  playlist_view.slint  track_info.slint  visualizer_canvas.slint
app/ui/components/: player_controls.slint  playlist_view.slint
apps/sonic-app/: Cargo.toml
apps/sonic-app/src/: main.rs
apps/sonic-cli/: Cargo.toml
apps/sonic-cli/src/: main.rs
crates/sonic-core/: Cargo.toml
crates/sonic-core/src/: error.rs  lib.rs
crates/sonic-core/src/audio/: analysis.rs  metadata.rs  mod.rs  player.rs  player_manager.rs  playlist.rs  spectrum_tap.rs  traits.rs
crates/sonic-core/src/audio/analysis/: fft.rs
crates/sonic-core/src/audio/decoder/: mod.rs  mp3.rs  registry.rs  symphonia.rs
crates/sonic-core/src/audio/effects/: equalizer.rs
crates/sonic-core/src/config/: mod.rs
crates/sonic-shader/: Cargo.toml
crates/sonic-shader/src/: effects_manager.rs  pipeline.rs  renderer.rs
crates/sonic-shader/src/shaders/: 3d_visualizer.hlsl  particle_system.hlsl  waveform.hlsl
crates/sonic-visualizer/: Cargo.toml
crates/sonic-visualizer/src/: engine.rs  mod.rs  traits.rs
crates/sonic-visualizer/src/plugins/: mod.rs  spectrum_bars.rs
docs/: ARCHITECTURE.md  CLAUDE.md  DIRECTORY.md  SPECIFICATIONS.md  SYSTEM.md
docs/roadmap/: README.md  gpu-visualizer-additions.md
docs/roadmap/milestones/v0-1-0/: ROADMAP.md
docs/roadmap/milestones/v0-2-0/: ROADMAP.md
docs/roadmap/milestones/v0-3-0/: ROADMAP.md
docs/roadmap/milestones/v0-4-0/: ROADMAP.md
docs/roadmap/milestones/v0-5-0/: ROADMAP.md
docs/roadmap/milestones/v0-6-0/: ROADMAP.md
docs/roadmap/milestones/v0-7-0/: ROADMAP.md
docs/roadmap/milestones/v0-8-0/: ROADMAP.md
docs/roadmap/milestones/v0-9-0/: ROADMAP.md
docs/roadmap/milestones/v1-0-0/: ROADMAP.md
docs/rules/: config.md  git.md  main.md
docs/slint/: template.md
docs/specs/: beat-detection.md  graphics.md  post-processing-pipeline.md  shader-catalog.md  ui-bottom-bar.md  ui-design.md  ui-playlist-drawer.md  ui-settings-drawer.md  ui-visualizer-canvas.md  ui.md  vision.md
examples/: integrated_music_player.rs  simple_mp3_player.rs
examples/advanced_effects_demo/: Cargo.toml
examples/advanced_effects_demo/src/: main.rs
examples/audio_integration_demo/: Cargo.toml
examples/audio_integration_demo/src/: main.rs
examples/basic-player/: Cargo.toml  main.rs  simple_player.rs
examples/gpu_integration_demo/: Cargo.toml
examples/gpu_integration_demo/src/: main.rs
examples/gpu_rendering_test/: Cargo.toml  main.rs
examples/hlsl_shader_demo/: Cargo.toml
examples/hlsl_shader_demo/src/: main.rs
examples/performance_optimization_demo/: Cargo.toml
examples/performance_optimization_demo/src/: main.rs
libs/sonic-core/: Cargo.toml
libs/sonic-core/src/: lib.rs
libs/sonic-core/src/audio/: engine.rs  metadata.rs  mod.rs  player_manager.rs  renderer.rs
libs/sonic-core/src/audio/analysis/: mod.rs
libs/sonic-core/src/audio/decoder/: flac.rs  wav.rs
libs/sonic-core/src/audio/effects/: crossfade.rs  mod.rs  reverb.rs
libs/sonic-shader/: Cargo.toml  README.md
libs/sonic-shader/src/: audio_bridge.rs  compiler.rs  effects_manager.rs  engine.rs  lib.rs  performance.rs  pipeline.rs  renderer.rs  types.rs
libs/sonic-shader/src/shaders/: simple_test.hlsl  spectrum_bars.hlsl
libs/sonic-ui/: Cargo.toml
libs/sonic-ui/src/: audio_bridge.rs  lib.rs  main_binding.rs
libs/sonic-ui/ui/: main_window.slint
libs/sonic-visualizer/: Cargo.toml
libs/sonic-visualizer/src/: lib.rs
libs/sonic-visualizer/src/plugins/: spectrum_bars.rs
scripts/: build.sh
src/: lib.rs  main.rs  simple_player.rs
src/app/: controller.rs  events.rs  lifecycle.rs  mod.rs  state.rs
src/audio/: engine.rs  metadata.rs  mod.rs  player_manager.rs  renderer.rs  traits.rs
src/audio/analysis/: fft.rs  mod.rs
src/audio/decoder/: flac.rs  mod.rs  mp3.rs  wav.rs
src/audio/effects/: crossfade.rs  equalizer.rs  mod.rs  reverb.rs
src/config/: mod.rs
src/error/: mod.rs
src/playlist/: mod.rs
src/plugin/: mod.rs
src/ui/: audio_integration.rs  bindings.rs  enhanced_binding.rs  mod.rs
src/utils/: mod.rs
src/visualizer/: canvas.rs  engine.rs  mod.rs  traits.rs
src/visualizer/plugins/: mod.rs  spectrum_bars.rs
tests/audio/: decoder_test.rs  metadata_test.rs
tests/integration/: audio_engine_test.rs
ui/: app-window.slint  main_window.slint
ui/components/: common.slint  track_info.slint
