[workspace]
resolver = "2"
members = [
    # Libraries
    "libs/sonic-core",
    "libs/sonic-ui", 
    "libs/sonic-visualizer",
    "libs/sonic-shader",
    # Applications
    "apps/sonic-app",
    "apps/sonic-cli",
    # Examples
    "examples/basic-player",
    "examples/hlsl_shader_demo",
    "examples/gpu_integration_demo",
]

[workspace.package]
version = "0.2.0"
authors = ["Sonic Flow Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/sonic-flow"
homepage = "https://github.com/your-org/sonic-flow"
documentation = "https://docs.rs/sonic-flow"
keywords = ["audio", "music", "player", "visualizer", "slint"]
categories = ["multimedia::audio", "gui"]
rust-version = "1.88"

[workspace.dependencies]
# Audio processing
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.2"
hound = "3.5"

# UI framework
slint = { version = "1.8", features = ["std", "compat-1-2"] }
rfd = "0.15"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# ID3 metadata
id3 = "1.14"

# Development tools
criterion = "0.5"
tempfile = "3.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1