[workspace]
resolver = "2"
members = [
    # Application
    "app",
    # Libraries
    "crates/sonic-core",
]

[workspace.package]
version = "0.1.0"
authors = ["itsakeyfut"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itsakeyfut/sonic-flow"
keywords = ["audio", "music", "player", "visualizer", "slint"]
categories = ["multimedia::audio", "gui"]
rust-version = "1.93"

[workspace.dependencies]
# Audio processing
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.2"
hound = "3.5"
id3 = "1.14"
metaflac = "0.2"

# UI framework
slint = { version = "1.8", features = ["std", "compat-1-2"] }
slint-build = "1.8"
rfd = "0.15"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"

# Platform-specific
winapi = { version = "0.3", features = ["winuser"] }

# Development tools
tempfile = "3.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1
