[package]
name = "sonic-flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Desktop music player with GPU-accelerated audio visualization"

default-run = "sonic-flow"

[[bin]]
name = "sonic-flow"
path = "src/main.rs"

[dependencies]
# Core libraries
sonic-core = { path = "../crates/sonic-core" }
sonic-visualizer = { path = "../crates/sonic-visualizer" }
sonic-shader = { path = "../crates/sonic-shader" }

# UI framework
slint.workspace = true
rfd.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
anyhow.workspace = true
hound.workspace = true
serde.workspace = true

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Windows-specific: Hide console window in release builds
[target.'cfg(windows)'.dependencies]
winapi.workspace = true
