[package]
name = "sonic-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Command-line interface for Sonic Flow music player"

[[bin]]
name = "sonic-cli"
path = "src/main.rs"

[dependencies]
# Core dependencies
sonic-core = { path = "../../libs/sonic-core" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
serde.workspace = true
anyhow.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["playback", "library"]
playback = []
library = []
metadata = []
visualization = []
