[package]
name = "sonic-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core audio processing library for Sonic Flow music player"

[dependencies]
# Audio playback and decoding
rodio.workspace = true
symphonia.workspace = true
hound.workspace = true

# Metadata
id3.workspace = true
metaflac.workspace = true

# Spectrum analysis
rustfft.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true

# Logging
tracing.workspace = true

# Errors
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
