[package]
name = "sonic-shader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Slang shader engine for Sonic Flow GPU-accelerated audio visualization"

[dependencies]
# Core dependencies
sonic-core = { path = "../sonic-core" }

# Graphics and GPU
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
winit.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true

# Utilities
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = ["vulkan"]
vulkan = []
metal = []
dx12 = []
wgsl = []

# [[bench]]
# name = "shader_compilation"
# harness = false
