[package]
name = "performance-optimization-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
sonic-shader = { path = "../../libs/sonic-shader" }
sonic-core = { path = "../../libs/sonic-core" }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
