[package]
name = "sonic-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core audio processing library for Sonic Flow music player"

[dependencies]
# Audio processing
rodio.workspace = true
symphonia.workspace = true
rustfft.workspace = true
hound.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Database
sqlx.workspace = true

# ID3 metadata
id3.workspace = true

# Additional dependencies
async-trait = "0.1"
parking_lot = "0.12"
metaflac = "0.2"
notify = "6.1"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["mp3", "flac", "wav", "ogg"]
mp3 = ["symphonia/mp3"]
flac = ["symphonia/flac"]
wav = ["symphonia/wav"]
ogg = ["symphonia/ogg", "symphonia/vorbis"]
aac = ["symphonia/aac"]
all-formats = ["mp3", "flac", "wav", "ogg", "aac"]

# [[bench]]
# name = "audio_processing"
# harness = false
