[package]
name = "sonic-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "User interface library for Sonic Flow music player"

[dependencies]
# Core dependencies
sonic-core = { path = "../sonic-core" }
sonic-visualizer = { path = "../sonic-visualizer" }

# UI framework
slint.workspace = true
rfd = { workspace = true, optional = true }

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# Utilities
serde.workspace = true
anyhow.workspace = true

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["file-dialogs", "themes"]
file-dialogs = ["rfd"]
themes = []
touch-support = []
